Closed Bug 1887971 Opened 11 months ago Closed 11 months ago

Assertion failure: aIsHardwareDecryption == capabilities.isHardwareDecryption(), at /builds/worker/checkouts/gecko/dom/media/eme/mediafoundation/WMFCDMImpl.cpp:41

Categories

(Core :: Audio/Video: Playback, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
126 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox124 --- unaffected
firefox125 --- unaffected
firefox126 --- fixed

People

(Reporter: tsmith, Assigned: alwu)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: assertion, regression)

Attachments

(1 file, 1 obsolete file)

Found with m-c 20240326-7a41e44c6e1a (--enable-debug --enable-fuzzing)

This was found by visiting a live website with a debug build.

STR:

  • Launch browser and visit site

This issue was triggered by visiting questionable web site. I will attach a link in a private comment. Visit with caution.

Assertion failure: aIsHardwareDecryption == capabilities.isHardwareDecryption(), at /builds/worker/checkouts/gecko/dom/media/eme/mediafoundation/WMFCDMImpl.cpp:41

30|0|xul.dll|mozilla::MozPromise<mozilla::MFCDMCapabilitiesIPDL,nsresult,1>::ThenValue<`lambda at /builds/worker/workspace/obj-build/dist/include/mozilla/media/MediaUtils.h:238:7',`lambda at /builds/worker/workspace/obj-build/dist/include/mozilla/media/MediaUtils.h:244:7'>::DoResolveOrRejectInternal(mozilla::MozPromise<mozilla::MFCDMCapabilitiesIPDL,nsresult,1>::ResolveOrRejectValue&)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/MozPromise.h:7a41e44c6e1aa0f57d7286a8427e78e75f972547|871|0x377
30|1|xul.dll|mozilla::MozPromise<mozilla::MFCDMCapabilitiesIPDL,nsresult,1>::ThenValueBase::ResolveOrRejectRunnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/MozPromise.h:7a41e44c6e1aa0f57d7286a8427e78e75f972547|487|0x55
30|2|xul.dll|mozilla::TaskQueue::Runner::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/TaskQueue.cpp:7a41e44c6e1aa0f57d7286a8427e78e75f972547|257|0x367
30|3|xul.dll|mozilla::TaskQueue::Runner::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/TaskQueue.cpp:7a41e44c6e1aa0f57d7286a8427e78e75f972547|257|0x367
30|4|xul.dll|nsThreadPool::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadPool.cpp:7a41e44c6e1aa0f57d7286a8427e78e75f972547|341|0x7df
30|5|xul.dll|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:7a41e44c6e1aa0f57d7286a8427e78e75f972547|1193|0xa68
30|6|xul.dll|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:7a41e44c6e1aa0f57d7286a8427e78e75f972547|480|0x44
30|7|xul.dll|mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:7a41e44c6e1aa0f57d7286a8427e78e75f972547|300|0xad
30|8|xul.dll|MessageLoop::RunHandler()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:7a41e44c6e1aa0f57d7286a8427e78e75f972547|363|0x4f
30|9|xul.dll|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:7a41e44c6e1aa0f57d7286a8427e78e75f972547|345|0x6e
30|10|xul.dll|nsThread::ThreadFunc(void*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:7a41e44c6e1aa0f57d7286a8427e78e75f972547|370|0x15a
30|11|nss3.dll|_PR_NativeRunThread(void*)|hg:hg.mozilla.org/mozilla-central:nsprpub/pr/src/threads/combined/pruthr.c:7a41e44c6e1aa0f57d7286a8427e78e75f972547|399|0x120
30|12|nss3.dll|pr_root(void*)|hg:hg.mozilla.org/mozilla-central:nsprpub/pr/src/md/windows/w95thred.c:7a41e44c6e1aa0f57d7286a8427e78e75f972547|139|0x10
30|13|ucrtbase.dll||||
30|14|KERNELBASE.dll||||
30|15|mozglue.dll|patched_BaseThreadInitThunk(int, void*, void*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/dllservices/mozglue/WindowsDllBlocklist.cpp:7a41e44c6e1aa0f57d7286a8427e78e75f972547|558|0x74
30|16|ntdll.dll||||
30|17|KERNELBASE.dll||||
Assignee: nobody → alwu

Set release status flags based on info from the regressing bug 1868482

Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ea8ea972270d always set 'isHardwareDecryption' on MFCDMCapabilitiesIPDL. r=jolin
Status: NEW → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
  • Make the block dialog modal (instead of an OS notification) and use UX strings
  • Make the warn dialog not have a default choice on it

Comment on attachment 9395343 [details]
Bug 1887971 - UX improvements for DLP block dialog and warn dialog r=#dlp-reviewers!

Revision D206813 was moved to bug 1879149. Setting attachment 9395343 [details] to obsolete.

Attachment #9395343 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: