Bug 1887971 : always set 'isHardwareDecryption' on MFCDMCapabilitiesIPDL. r=jolin

Differential Revision: https://phabricator.services.mozilla.com/D206290